statement

coord x 1,1000 log x log y

is now legal.  x and y are now legal variable names.  They used to be
language tokens, and in fact still are, although their scope as tokens
is now limited to coord statements.

Tried to streamline the use of for_each and functors by removing
trivial calls to for_each.  Still trying to move code out of grap.y to
make it shorter to compile.

1.06: Added an anonymous donor's TeX defines.  Also added the -C
compatibility option for groff and fixed some manpage formatting bugs.

1.05: kromJx@crosswinds.net noticed that numbers like 1. weren't
accepted.  They are now.  While I was fixing that I noticed that copy
until commands without a macro weren't supported.  They are now.  Made
a minor change to the examples to test the fixes.

1.03: Added the -M path option to make groff handle grap better.  I
also added the GRAP_DEFINES environment variable to change the defines
file.  I also added a new source file, grap_parse.cc in an attempt to
break up the monolithic and gigantic grap.y.  I had some small
success.  In the course of creating grap_parse.cc I think I caught
some memory leaks, too.

1.02: Bruce's error handling code produced a few inconsistencies
(eating the last newline of a file, and adding one befor ethe file.  I
think it no longer does that.  In addition I took care of a error
placement bug when the error was in a line containing a macro
expansion, and changed the error handling from using char * to using
Strings, like the rest of grap.

Got rid of an error on SunOS (and presumably other architectures) 
where -0 labels were printed on auto-generated labels.

Fixed bugs in sprintf when compiled using standard strings.

Fixed a memory leak and general bug with the undocumented color
commands. (There, that'll tell me if anyone reads this!)

1.01: Fixed a compilation bug under RedHat 6.1.  Cleaned up autoconf
and tweaked the makefile.

1.0: Incorporated Bruce Lilley's error reporting code.  Cleaned up the